# crowded-plaza

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  index.html
benchmark/bevy-min-wasm/: Cargo.toml  README.md
benchmark/bevy-min-wasm/src/: main.rs
benchmark/unity-many-cubes/: README.md
benchmark/unity-many-cubes/Assets/: Cube.prefab  FpsCounter.cs  New Material.mat  RotationSpeedSystem_ForEach.cs  Scene.unity  Spawner_FromMonoBehaviour.cs  Universal Render Pipeline Asset.asset  Universal Render Pipeline Asset_Renderer.asset
benchmark/unity-many-cubes/ProjectSettings/: GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
benchmark/unity-many-cubes/UserSettings/: EditorUserSettings.asset
benchmark/unity-many-cubes/UserSettings/Layouts/: default-2021.dwlt
benchmark/unity-min-wasm/: .gitignore  README.md
benchmark/unity-min-wasm/Assets/: Rotate.cs
benchmark/unity-min-wasm/Assets/Scenes/: SampleScene.unity
benchmark/unity-min-wasm/ProjectSettings/: ProjectSettings.asset
benchmark/unity-min-wasm/UserSettings/Layouts/: default-2021.dwlt
examples/: many_cubes.rs
mgame/: Cargo.toml
mgame/src/: main.rs
release/: game.js
src/: canvas_resize.rs  main.rs
